--- a/QLLH.Web/ClientApp/src/app/quan-ly-hoc-sinh/quan-ly-hoc-sinh.component.css
+++ b/QLLH.Web/ClientApp/src/app/quan-ly-hoc-sinh/quan-ly-hoc-sinh.component.css
@@ -20,3 +20,12 @@ div.row div.label {
     padding-right: 0;
     margin-top: 5px;
 }
+
+div.themBtn {
+    display: inline;
+    margin-right: 10px;
+}
+
+div.dropdownLopBtn {
+    display: inline;
+}
