--- a/QLLH.Web/ClientApp/src/app/home/home.component.html
+++ b/QLLH.Web/ClientApp/src/app/home/home.component.html
@@ -7,15 +7,6 @@
     </div>
   </div>
 </a>
-<a [routerLink]="['/quan-ly-lop-hoc']">
-  <div class="card">
-    <div class="card-body">
-      <p class="card-text">
-        Quản lý lớp học
-      </p>
-    </div>
-  </div>
-</a>
 <a [routerLink]="['/quan-ly-giao-vien']">
   <div class="card">
     <div class="card-body">
@@ -25,11 +16,38 @@
     </div>
   </div>
 </a>
-<a [routerLink]="['/quan-ly-thoi-khoa-bieu']">
+<a [routerLink]="['/quan-ly-tkb-theo-lop']">
   <div class="card">
     <div class="card-body">
       <p class="card-text">
-        Quản lý thời khóa biểu
+        Quản lý thời khóa biểu lớp học
+      </p>
+    </div>
+  </div>
+</a>
+<a [routerLink]="['/quan-ly-tkb-theo-giao-vien']">
+  <div class="card">
+    <div class="card-body">
+      <p class="card-text">
+        Quản lý thời khóa biểu giáo viên
+      </p>
+    </div>
+  </div>
+</a>
+<a [routerLink]="['/quan-ly-lop-hoc']">
+  <div class="card">
+    <div class="card-body">
+      <p class="card-text">
+        Quản lý lớp học
+      </p>
+    </div>
+  </div>
+</a>
+<a [routerLink]="['/quan-ly-tai-khoan']">
+  <div class="card">
+    <div class="card-body">
+      <p class="card-text">
+        Quản lý tài khoản
       </p>
     </div>
   </div>
