--- a/QLLH.Web/ClientApp/src/app/quan-ly-giao-vien/quan-ly-giao-vien.component.css
+++ b/QLLH.Web/ClientApp/src/app/quan-ly-giao-vien/quan-ly-giao-vien.component.css
@@ -2,13 +2,32 @@
     margin-top: 50px;  
 }
 
-button.btn-success {
+.body {
+    margin-bottom: 50px;
+    border: 1px solid #e1e1ea;
+    border-radius: 10px;
+    box-shadow: 18px 20px 60px -9px rgba(0,0,0,0.75);
+}
+
+.btn-success {
+    color: white;
+    text-decoration: none;
     margin-right: 10px;
+}
+
+.btn-danger {
+    color: white;
+    text-decoration: none;
+}
+
+.btn-success:hover, .btn-danger:hover {
+    color: white;
 }
 
 .pagination-bar {
     display: flex;
     justify-content: center;
+    align-items: center;
     font-size: 15px;
 }
 
@@ -19,4 +38,28 @@ div.row {
 div.row div.label {
     padding-right: 0;
     margin-top: 5px;
+}
+
+div.listGiaoVienBtn {
+    display: inline;
+    margin-right: 10px;
+}
+
+div.rowBtn {
+    display: inline;
+    margin-right: 10px;
+}
+
+div.themBtn {
+    display: inline;
+    text-align: center;
+}
+
+div.dropdownLopBtn {
+    display: inline;
+    margin-right: 10px;
+}
+
+select option:disabled {
+    background: #e9ecef;
 }
