--- a/QLLH.Web/ClientApp/src/app/quan-ly-giao-vien/quan-ly-giao-vien.component.html
+++ b/QLLH.Web/ClientApp/src/app/quan-ly-giao-vien/quan-ly-giao-vien.component.html
@@ -1,57 +1,94 @@
-<h3>
-  <a href="javascript:window.location.href=window.location.href">Danh sách giáo viên</a>
-</h3>
-<div class="container">
-  <nav class="navbar navbar-light bg-light">
-    <button type="button" class="btn btn-primary" (click)="openModal(false, null)">Thêm giáo viên</button>
-    <form class="form-inline">
-      <input class="form-control mr-sm-2" id="tenGiaoVien" type="search" placeholder="Nhập tên giáo viên" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="timKiemGiaoVien(1)">Tìm kiếm</button>
-    </form>
-  </nav>
-</div>
-<div class="container">
-    <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Mã giáo viên</th>
-            <th scope="col">Tên giáo viên</th>
-            <th scope="col">Môn giảng dạy</th>
-            <th scope="col">Giới tính</th>        
-            <th scope="col">Số điện thoại</th>
-            <th scope="col">Hành động</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr *ngFor="let gv of listGiaoVien.data; index as i">
-            <td>{{ gv.maGv }}</td>
-            <td>{{ gv.tenGv }}</td>
-            <td>{{ gv.tenMh }}</td>
-            <td>{{ gv.gioiTinh }}</td>
-            <td>{{ gv.soDt }}</td>
-            <td>
-              <button type="button" class="btn btn-success" (click)="openModal(true, i)">Sửa</button>
-              <button type="button" class="btn btn-danger" (click)="xoaGiaoVien(i)">Xóa</button>
-            </td>
-          </tr>
-        </tbody>
-    </table>
+<div class="body">
+  <div class="container">
+    <nav class="navbar navbar-light bg-light">
+      <div class="navGiaoVien">
+        <div class="listGiaoVienBtn">
+          <a class="btn btn-outline-dark" href="javascript:window.location.href=window.location.href">
+            <i class="fa fa-book" aria-hidden="true"></i> Danh sách
+          </a>
+        </div>
+        <div class="rowBtn">
+          <div class="btn-group dropright">
+            <button id="row" type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              {{ size }}
+            </button>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" *ngFor="let r of listRow" (click)="chonSoDongHienThi(r.row)">{{ r.row }}</a>
+            </div>
+          </div>
+        </div>
+        <div class="dropdownLopBtn">
+          <div class="btn-group dropright">
+            <button id="tenMonHoc" type="button" class="btn btn-outline-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Môn học
+            </button>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" *ngFor="let mh of listMonHoc" (click)="timKiemGiaoVienTheoMonHoc(1, mh.tenMh)">{{ mh.tenMh }}</a>
+            </div>
+          </div>
+        </div>
+        <div class="themBtn">
+          <button type="button" class="btn btn-outline-primary" (click)="openModalAddEdit(false, null)">
+            <i class="fa fa-plus-square-o fa-lg" aria-hidden="true"></i> Thêm giáo viên 
+          </button>
+        </div>
+      </div>
+      <form class="form-inline">
+        <input style="border: 1px solid #28a745;" class="form-control mr-sm-2" id="tenGiaoVien" type="search" placeholder="Nhập tên giáo viên" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit" (click)="timKiemGiaoVien(1)">
+          <i class="fa fa-search" aria-hidden="true"></i>
+        </button>
+      </form>
+    </nav>
+  </div>
+  <div class="container">
+      <table class="table">
+          <thead>
+            <tr>
+              <th scope="col">Mã giáo viên</th>
+              <th scope="col">Tên giáo viên</th>
+              <th scope="col">Môn giảng dạy</th>
+              <th scope="col">Chủ nhiệm lớp</th>
+              <th scope="col">Giới tính</th>        
+              <th scope="col">Số điện thoại</th>
+              <th scope="col">Hành động</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let gv of listGiaoVien.data; index as i">
+              <td>{{ gv.maGv }}</td>
+              <td>{{ gv.tenGv }}</td>
+              <td>{{ gv.tenMh }}</td>
+              <td>{{ gv.tenLop }}</td>
+              <td>{{ gv.gioiTinh }}</td>
+              <td>{{ gv.soDt }}</td>
+              <td>
+                <a class="btn btn-success" (click)="openModalAddEdit(true, i)">
+                  <i class="fa fa-pencil-square-o" aria-hidden="true"></i>
+                </a>
+                <a class="btn btn-danger" (click)="openModalDelete(i)">
+                  <i class="fa fa-trash-o" aria-hidden="true"></i>
+                </a>
+              </td>
+            </tr>
+          </tbody>
+      </table>
+  </div>
+  <!-- Pagination -->
+  <div class="pagination-bar">
+    <nav class="pagination-nav" aria-label="Page navigation example">
+      <ul class="pagination">
+        <li class="page-item"><a class="page-link" href="javascript:void(0)" (click)="danhSachGiaoVienTruoc()">Trước</a></li>
+        <li class="page-item"><a class="page-link" href="javascript:void(0)">{{ listGiaoVien.page }}</a></li>
+        <li class="page-item"><a class="page-link" href="javascript:void(0)" (click)="danhSachGiaoVienSau()">Sau</a></li>
+      </ul>
+    </nav>
+  </div>
+  <!-- End Pagination -->
 </div>
 
-<!-- Pagination -->
-<div class="pagination-bar">
-  <nav aria-label="Page navigation example">
-    <ul class="pagination">
-      <li class="page-item"><a class="page-link" href="javascript:void(0)" (click)="danhSachGiaoVienTruoc()">Trước</a></li>
-      <li class="page-item"><a class="page-link" href="javascript:void(0)">{{ listGiaoVien.page }}</a></li>
-      <li class="page-item"><a class="page-link" href="javascript:void(0)" (click)="danhSachGiaoVienSau()">Sau</a></li>
-    </ul>
-  </nav>
-</div>
-<!-- End Pagination -->
-
-<!-- Modal -->
-<div class="modal fade" id="modalGiaoVien" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<!-- Modal Add and Edit -->
+<div class="modal fade" id="modalAddEdit" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -76,7 +113,7 @@
           <div class="col-2 label">Môn giảng dạy</div>
           <div class="col-4">
             <select class="form-control" id="monHoc" [(ngModel)]="giaoVien.maMh">
-              <option *ngFor="let mh of listMonHoc" [ngValue]="mh.maMh">{{ mh.tenMh }}</option>
+              <option class="option-item" *ngFor="let mh of listMonHoc" [ngValue]="mh.maMh">{{ mh.tenMh }}</option>
             </select>
           </div>
           <div class="col-2 label">Ngày sinh</div>
@@ -88,8 +125,8 @@
           <div class="col-2 label">Giới tính</div>
           <div class="col-4">
             <select class="form-control" id="gioiTinh" [(ngModel)]="giaoVien.gioiTinh">
-              <option>Nam</option>
-              <option>Nữ</option>
+              <option class="option-item">Nam</option>
+              <option class="option-item">Nữ</option>
             </select>
           </div>
           <div class="col-2 label">Số điện thoại</div>
@@ -98,8 +135,14 @@
           </div>
         </div>
         <div class="row">
+          <div class="col-2 label">Chủ nhiệm lớp</div>
+          <div class="col-4">
+            <select class="form-control" id="lop" [(ngModel)]="giaoVien.maLop" disabled>
+              <option *ngFor="let l of listLop" [ngValue]="l.maLop">{{ l.tenLop }}</option>
+            </select>
+          </div>
           <div class="col-2 label">Địa chỉ</div>
-          <div class="col-10">
+          <div class="col-4">
             <input type="text" class="form-control" placeholder="Nhập địa chỉ" [(ngModel)]="giaoVien.diaChi" />
           </div>
         </div>
@@ -108,6 +151,28 @@
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
         <button type="submit" class="btn btn-primary" (click)="themGiaoVien()" *ngIf="!isEdit">Thêm</button>
         <button type="submit" class="btn btn-success" (click)="suaGiaoVien()" *ngIf="isEdit">Sửa</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- End Modal -->
+
+<!-- Modal Delete -->
+<div class="modal fade" id="modalDelete" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Xóa giáo viên</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        Bạn có muốn xóa giáo viên này không ?
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+        <button id="deleteBtn" type="button" class="btn btn-danger">Xóa</button>
       </div>
     </div>
   </div>
