--- a/QLLH.Web/ClientApp/src/app/quan-ly-lop-hoc/quan-ly-lop-hoc.component.css
+++ b/QLLH.Web/ClientApp/src/app/quan-ly-lop-hoc/quan-ly-lop-hoc.component.css
@@ -2,11 +2,41 @@
     margin-top: 50px;  
 }
 
-button.btn a {
+.body {
+    margin-bottom: 50px;
+    border: 1px solid #e1e1ea;
+    border-radius: 10px;
+    box-shadow: 18px 20px 60px -9px rgba(0,0,0,0.75);
+}
+
+.btn-success {
     color: white;
     text-decoration: none;
 }
 
-button.btn-success {
+.btn-success:hover {
+    color: white;
+}
+
+.btn-primary {
     margin-right: 10px;
+}
+
+.pagination-bar {
+    display: flex;
+    justify-content: center;
+    font-size: 15px;
+}
+
+div.row {
+    margin-top: 10px;
+}
+
+div.row div.label {
+    padding-right: 0;
+    margin-top: 5px;
+}
+
+select option:disabled {
+    background: #e9ecef;
 }
